added some EDA and dataset creation

--- a/DownloadImages_dgterritorio.ipynb
+++ b/DownloadImages_dgterritorio.ipynb
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -95,7 +95,7 @@
        "'2019-mar-abr-RGB'"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -106,28 +106,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(-170000.0, -320000.0, 200000.0, 290000.0)"
+       "(-170000.0, -320000.0, 200000.0, 290000.0, 'EPSG:3763')"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "boxlong1,boxlat1,boxlong2,boxlat2,_ = wms['2019-mar-abr-RGB'].boundingBox\n",
-    "boxlong1,boxlat1,boxlong2,boxlat2"
+    "boxlong1,boxlat1,boxlong2,boxlat2,format = wms['2019-mar-abr-RGB'].boundingBox\n",
+    "boxlong1,boxlat1,boxlong2,boxlat2,format"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -136,7 +136,7 @@
        "(-10.1934, 36.7643, -5.70954, 42.2796)"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -148,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -164,7 +164,7 @@
        " 'application/vnd.google-earth.kmz']"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -175,16 +175,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['EPSG:4326', 'EPSG:900913', 'EPSG:3763', 'EPSG:4258', 'EPSG:3857']"
+       "['EPSG:4258', 'EPSG:3763', 'EPSG:4326', 'EPSG:900913', 'EPSG:3857']"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -195,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -205,7 +205,7 @@
        "  'legend': 'http://ows.dgterritorio.pt/wss/service/IPSentinel2-wms/guest?language=por&version=1.1.1&service=WMS&request=GetLegendGraphic&layer=S2PT10m&format=image/png&STYLE=default'}}"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -227,10 +227,10 @@
     "    mapy = (lat - reallat1)  * (boxlat2 - boxlat1) / (reallat2 - reallat1) + boxlat1\n",
     "    print(mapx)\n",
     "    print(mapy)\n",
-    "    img = wms.getmap( layers=['2016-set-RGB'],\n",
+    "    img = wms.getmap( layers=['2019-mar-abr-RGB'],\n",
     "                    srs='EPSG:3763',\n",
     "                     bbox=(mapx - square_size,mapy - square_size ,mapx + square_size,mapy + square_size),\n",
-    "                    size=(600,500),\n",
+    "                    size=(500,500),\n",
     "                format='image/jpeg',\n",
     "                Transparent=True)\n",
     "\n",
@@ -241,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
