--- a/MODELS/road_accidents.ipynb
+++ b/MODELS/road_accidents.ipynb
@@ -62,7 +62,7 @@
         "from tensorflow.keras.callbacks import ModelCheckpoint\n",
         "from tensorflow.keras.models import load_model\n"
       ],
-      "execution_count": 6,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -72,24 +72,20 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 122
+          "height": 34
         },
-        "outputId": "c0039730-9866-49c7-ed94-e26193dd06cc"
+        "outputId": "7339da27-2285-44c5-887d-8ff2f0f25f93"
       },
       "source": [
         "from google.colab import drive\n",
         "drive.mount('/content/drive')"
       ],
-      "execution_count": 19,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Go to this URL in a browser: https://accounts.google.com/o/oauth2/auth?client_id=947318989803-6bn6qk8qdgf4n4g3pfee6491hc0brc4i.apps.googleusercontent.com&redirect_uri=urn%3aietf%3awg%3aoauth%3a2.0%3aoob&response_type=code&scope=email%20https%3a%2f%2fwww.googleapis.com%2fauth%2fdocs.test%20https%3a%2f%2fwww.googleapis.com%2fauth%2fdrive%20https%3a%2f%2fwww.googleapis.com%2fauth%2fdrive.photos.readonly%20https%3a%2f%2fwww.googleapis.com%2fauth%2fpeopleapi.readonly\n",
-            "\n",
-            "Enter your authorization code:\n",
-            "··········\n",
-            "Mounted at /content/drive\n"
+            "Drive already mounted at /content/drive; to attempt to forcibly remount, call drive.mount(\"/content/drive\", force_remount=True).\n"
           ],
           "name": "stdout"
         }
@@ -6245,12 +6241,9 @@
         "else:\n",
         "  model_3.compile(optimizer='adam', loss='categorical_crossentropy', metrics=METRICS)\n",
         "\n",
-        "##history = model_3.fit(train_dataset, epochs=EPOCHS, steps_per_epoch=train_size/BATCH_SIZE, validation_data = val_dataset, validation_steps= val_size/BATCH_SIZE,\n",
-        "##                      callbacks=[checkpoint])\n",
-        "\n",
-        "\n",
-        "history = model_3.fit(train_dataset, epochs=EPOCHS, steps_per_epoch=2, validation_data = val_dataset, validation_steps= 2,\n",
+        "history = model_3.fit(train_dataset, epochs=EPOCHS, steps_per_epoch=train_size/BATCH_SIZE, validation_data = val_dataset, validation_steps= val_size/BATCH_SIZE,\n",
         "                      callbacks=[checkpoint])\n",
+        "\n",
         "\n",
         "history = get_total_history(past_history,pd.DataFrame.from_dict(history.history))\n",
         "\n",
