--- a/Download-images/Download-images-PORTUGAL.ipynb
+++ b/Download-images/Download-images-PORTUGAL.ipynb
@@ -32057,13 +32057,7 @@
       "transfering image nr 14129\n",
       "transfering image nr 14130\n",
       "transfering image nr 14131\n",
-      "transfering image nr 14132\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "transfering image nr 14132\n",
       "transfering image nr 14133\n",
       "transfering image nr 14134\n",
       "transfering image nr 14135\n",
@@ -34798,13 +34792,7 @@
       "transfering image nr 16822\n",
       "transfering image nr 16823\n",
       "transfering image nr 16824\n",
-      "transfering image nr 16825\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "transfering image nr 16825\n",
       "transfering image nr 16826\n",
       "transfering image nr 16827\n",
       "transfering image nr 16828\n",
@@ -56786,7 +56774,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
